--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
 cortex-m-rt = "0.7.3"
 defmt = "0.3.8"
 defmt-rtt = "0.4.1"
+nrf51-pac = "0.12.2"
 panic-halt = "0.2.0"
 rtt-target = "0.5.0"
