Add example of using Board Support Package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ cortex-m-rt = "0.7.3"
 defmt = "0.3.8"
 defmt-rtt = "0.4.1"
 embedded-hal = "1.0.0"
+microbit = "0.15.1"
 nrf51-hal = "0.18.0"
 nrf51-pac = "0.12.2"
 panic-halt = "0.2.0"
